2022-12-01  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Initial release 0.0.2

	* README.md (spdl): More edits

2022-11-29  Dirk Eddelbuettel  <edd@debian.org>

	* README.md (spdlog): Minor edits

2022-11-26  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version and date

	* tests/simpleTest.R: Add simple tests for cat() and fmt()
	* tests/simpleTest.Rout.save: Reference output

2022-11-24  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version and date

	* DESCRIPTION (BugReports, URL): Added

2022-11-22  Dirk Eddelbuettel  <edd@debian.org>

	* R/wrap.R (fmt, cat): Export cat() and fmt()

	* README.md: Add badges, small edits

2022-11-21  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Initial release 0.0.1

	* R/wrap.R (.fmt): Do not use \dontrun
	* man/setup.Rd: Idem

	* README.md: Small edits
	* DESCRIPTION: Idem

2022-11-17  Dirk Eddelbuettel  <edd@debian.org>

	* inst/NEWS.Rd: Added
	* tests/simpleTest.R: Idem
	* tests/simpleTest.Rout.save: Idem

2022-11-16  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Initial commit
	* NAMESPACE: Idem
	* README.md: Idem
	* R/init.R: Idem
	* R/wrap.R: Idem
	* man/setup.Rd: Idem

	* .github/workflows/ci.yaml: Added
	* .Rbuildignore: Idem
	* .gitignore: Idem