@@ -1,6 +1,10 @@
+2022-12-13  Dirk Eddelbuettel  <edd@debian.org>
+
+	* R/wrap.R (filesetup): Add filesetup method
+
 2022-12-01  Dirk Eddelbuettel  <edd@debian.org>
 
-	* DESCRIPTION (Version, Date): Initial release 0.0.2
+	* DESCRIPTION (Version, Date): Release 0.0.2
 
 	* README.md (spdl): More edits
 
